# pong-along

./: .gitignore  .gitmodules  :w  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  app.h  client.c  cmake_install.cmake  compile_commands.json  docs.txt  hello.c  main.c  resources.txt  server.c  tree.sh  tree.txt
.cache/clangd/index/: async.c.18F18F9BD41C33BB.idx  core.c.B4647C03713177C7.idx  dl.c.8F0F88DD1D94398F.idx  errno.h.9F836FDABED4BD5C.idx  fs-poll.c.C8D90148B4DB71D0.idx  fs.c.6D227915CF1D7055.idx  getaddrinfo.c.617C3AECCE27DD6E.idx  getnameinfo.c.3B0DCF5334B71FD6.idx  heap-inl.h.EAD8BC2F7A5EA387.idx  idna.c.D24734792A56E91F.idx  idna.h.0ED3FD188C51AECB.idx  inet.c.8E1D4C36217B3ADF.idx  internal.h.BE84BD91B3309CEF.idx  linux.c.8583A11ABCFB3B17.idx  linux.h.982FCDA94729B017.idx  loop-watcher.c.6A9253A4945A48A1.idx  loop.c.2351C8EC76AFC5F4.idx  pipe.c.F2446F0C25A558D3.idx  poll.c.2DEE2C549B71ABED.idx  process.c.70DF10B74F01310E.idx  procfs-exepath.c.D96F0896AFF19AD8.idx  proctitle.c.2B487DBF2CA0DA81.idx  queue.h.24C9644BDB54AE5C.idx  random-devurandom.c.3A61ECE45439D76E.idx  random-getrandom.c.7EF17D2E53634785.idx  random-sysctl-linux.c.72532E816F978E61.idx  random.c.BFAE18A1E6C6C22C.idx  signal.c.9FD0A77A8446E44B.idx  stream.c.8DA7D6F284863DF2.idx  strscpy.c.5D4FBB5352EBE453.idx  strscpy.h.F9EDBAA2F77A0CFF.idx  strtok.c.6F43816118D2B307.idx  strtok.h.2F4447766FFE3D46.idx  tcp.c.9622D165BAF258E7.idx  thread-common.c.8E9B37A5FD626892.idx  thread.c.4C61185BAD9BE720.idx  threadpool.c.D6C510E9C59D684A.idx  threadpool.h.975B3CE29A9AA4E9.idx  timer.c.6A81872F12370D4B.idx  tree.h.69E39E129EF94B96.idx  (+9 more)
client/: client.c  client.h  loop.c  loop.h  renderer.c  renderer.h
client/frames/: enter_username.c  enter_username.h  gameplay.c  gameplay.h  handlers.c  handlers.h  pointing.c  pointing.h  select_opponent.c  select_opponent.h
client/net/: net.c  net.h  shared.c  shared.h  tcp.c  tcp.h  udp.c  udp.h
client/view/: circle.c  circle.h  dashboard.c  dashboard.h  line.c  line.h  physics.c  rect.c  rect.h  text.c  text.h  view.c  view.h
dsa/: arena.c  array.c  array.h  string.c  string.h
loop/: loop.c  loop.h
net/: net.c  net.h  parse.c  parse.h  shared.c  tcp.c  tcp.h  udp.c  udp.h
server/: server.c  server.h  shared.c  shared.h  tcp.c  tcp.h  test.c  udp.c  udp.h
server/handlers/: handlers.c  handlers.h
server/models/: invites.c  invites.h  users.c  users.h  users_two.h
shared/: buffer.c  buffer.h  callback.c  callback.h  encode.c  encode.h  macro.h  parse.c  parse.h  tcp.c
view/: CMakeLists.txt  circle.c  circle.h  dashboard.c  dashboard.h  physics.c  physics.h  text.c  text.h  view.c  view.h
